# cashflow-guardian-2026

./: .gitignore  README.md  cloud_env.bat  current_project_audit.md  implementation2_plan.md  implementation3_plan.md  implementation3_revised_plan.md  implementation4_plan.md  implementation5_plan.md  implementation_fix_plan.md  implementation_fixx_plan.md  implementation_plan.md  policy_validation.md  pyproject.toml  security_validation.md  walkthrough_9A.md
cashflow_guardian/: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  agents-cli-manifest.yaml  policies.yaml  pyproject.toml  requirements.txt
cashflow_guardian/agents_cli_agent/: agent.py
cashflow_guardian/app/: README.md  __init__.py  adk_app.py
cashflow_guardian/artifacts/: README.md  business_engines_design.md  business_engines_validation.md  data_engine_design.md  data_engine_validation.md  label_audit.md  risk_engine_validation.md  specification_review.md  tool_registry.md  training_dataset_audit.md
cashflow_guardian/config/: README.md  agent.yaml  app.yaml  database.yaml  model.yaml  thresholds.yaml
cashflow_guardian/data/: README.md
cashflow_guardian/deployment/: README.md
cashflow_guardian/docs/: README.md  demo_script.md  final_evidence_inventory.md  final_project_status.md  kaggle_writeup_draft.md  screenshot_checklist.md  step8_local_acceptance.md  step9_evaluation.md  step9_evaluation_plan.md  step9_failure_analysis.md  submission_checklist.md
cashflow_guardian/evals/: README.md
cashflow_guardian/models/: README.md  baseline_model.joblib  best_model.joblib  model_metadata.json  (+3 more)
(+207 files in other folders)
