[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cashflow_guardian"
version = "1.0.0"
description = "SME Cash-Flow Stress Early Warning and Decision-Support System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "duckdb",
    "pyyaml",
    "google-adk==2.3.0",
    "fastapi>=0.139.0,<0.140.0",
    "uvicorn>=0.49.0",
    "pandas",
    "numpy",
    "scikit-learn",
    "joblib"
]

[tool.setuptools.packages.find]
where = ["src"]
